[package]
name = "softbrush"
description = "A 2D software renderer"
version = "0.2.0"
edition = "2021"
license = "0BSD"
repository = "https://github.com/lunamothxyz/softbrush"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.13.2"
log = "0.4.17"